# frappe_crewai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
frappe_crewai/: hooks.py  modules.txt
frappe_crewai/api/: ai_query.py
frappe_crewai/config/: agents.yaml  desktop.py  docs.py  tasks.yaml
frappe_crewai/crew/: frappe_ai_crew.py
frappe_crewai/crew/frappe_crewai/config/: agents.yaml  tasks.yaml
frappe_crewai/public/css/: ai_chat.css  login.css
frappe_crewai/public/js/: ai_chat.js  login.js
frappe_crewai/tools/: mysql_tool.py
frappe_crewai/www/: login.html  login.py
