[project]
name = "frappe_crewai"
authors = [
    { name = "Shaid Azmin", email = "azmin@pixfar.com"}
]
description = "AI Agent for frappe powered by CrewAI"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0",  # Comment this out – managed by Bench
    "crewai[tools]",
    "ollama",
    "embedchain[mysql]",
    "pymysql",
    "embedchain",
    "transformers",
    "torch",
    "langchain",
    "langchain-ollama"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

